# knodex

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.claude/wiki/: lessons.md
.github/workflows/: deploy-pages.yml  deploy.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_document_tags.py  0003_add_users_and_auth.py  0004_document_user_and_ingestion_status.py  0005_query_logs.py  0006_firebase_uid.py  0007_document_thumb_path.py
backend/app/: config.py  main.py
backend/app/dependencies/: auth.py
backend/app/models/: __init__.py  chunk.py  document.py  document_tag.py  highlight.py  query_log.py  tag.py  user.py
backend/app/routers/: admin.py  auth.py  document_tags.py  documents.py  highlights.py  query.py  search.py  tags.py
backend/app/schemas/: document.py  document_tag.py  highlight.py  tag.py
backend/app/services/: auth_service.py  cf_ai.py  cf_vectorize.py  document_service.py  document_tag_service.py  firebase.py  highlight_service.py  ingestion_service.py  storage.py  sync_service.py  tag_service.py
backend/scripts/: bootstrap_user.py  create_admin.py
backend/tests/: conftest.py  test_document_tags.py  test_documents.py  test_highlights.py  test_ingestion.py  test_search.py  test_tags.py
backend/worker/: main.py  tasks.py
docs/: architecture.md  user-flow.md
frontend/: .env.github-pages  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: 404.html
nginx/: nginx.conf
(+115 files in other folders)
